--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "dependencies": {
     "fp-ts": "^2.16.9",
     "knex": "^3.1.0",
+    "purify-ts": "^2.1.0",
+    "ramda": "^0.30.1",
     "soap": "^1.1.1",
     "tedious": "^18.3.0"
   }
